# Data-Structures-In-C

./: .clang-format  .gitignore
Graph/: main.c  meson.build
Graph/ALGraph/: al_graph.c  al_graph.h
Graph/test/: test.c  test.h
Queue/: main.c
Queue/LinkQueue/: link-queue.c  link-queue.h
Queue/SqQueue/: sq-queue.c  sq-queue.h
SequentialList/: meson.build  seqlist.c
SinglyLinkedList/: linklist.c  linklist.h  main.c  meson.build
Stack/: main.c  meson.build
Stack/Li/: li-stack.c  li-stack.h
Stack/Sq/: sq-stack.c  sq-stack.h
String/: main.c
String/src/: hstring.c  hstring.h
Tree/: main.c
Tree/BiTree/: bi-tree.c  bi-tree.h
